--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,19 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-    "files.exclude": {
-        "**/.git/objects/**": true,
-        "**/.git/subtree-cache/**": true,
-        "**/.vscode-test/*/**": true,
-        "**/node_modules/*/**": true,
-        "**/out/*/**": true
-    },
-    "search.exclude": {
-        "**/.git": true,
-        "**/.vscode-test": true,
-        "**/node_modules": true,
-        "**/out": true
-    },
-    "editor.rulers": [80]
+  "files.exclude": {
+    "**/.git/objects/**": true,
+    "**/.git/subtree-cache/**": true,
+    "**/.vscode-test/*/**": true,
+    "**/node_modules/*/**": true,
+    "**/out/*/**": true
+  },
+  "search.exclude": {
+    "**/.git": true,
+    "**/.vscode-test": true,
+    "**/node_modules": true,
+    "**/out": true
+  },
+  "editor.rulers": [
+    80
+  ]
 }
